api screenshot on deploy

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,26 +1,1 @@
-# This configuration file tells Netlify how to build and deploy your main site.
-# Place this in the root of your "Site Mills" project folder.
-
-[build]
-  # This tells Netlify that all files in the root should be published.
-  # This ensures your "pages" folder and everything in it gets deployed.
-  publish = "."
-
-# You can also add form settings here for clarity, though they are often automatic.
-[functions]
-  # No functions needed for this project.
-
-# Form handling settings
-[build.processing]
-  skip_processing = false
-[build.processing.css]
-  bundle = true
-  minify = true
-[build.processing.js]
-  bundle = true
-  minify = true
-[build.processing.html]
-  pretty_urls = true
-[build.processing.images]
-  compress = true
-
+This configuration file tells Netlify how to build and deploy your main site.Place this in the root of your "Site Mills" project folder.[build]We are switching to a much lighter build command using a Node.js fetch script.This drastically reduces build time and preserves your Netlify build minutes.command = "npm install --production && node screenshot.js"publish = "."Form handling settings[build.processing]skip_processing = false[build.processing.css]bundle = trueminify = true[build.processing.js]bundle = trueminify = true[build.processing.html]pretty_urls = true[build.processing.images]compress = true
